Login redirect to the owner page
1. Handling login from owner
2. Small changes in the owner page
3. Added tempalte for user list
4. Added function to append a new user to the user list

--- a/src/main/webapp/resources/css/layouts/email.css
+++ b/src/main/webapp/resources/css/layouts/email.css
@@ -31,7 +31,7 @@ table, tr, td {
 	border-spacing: 0px;
 }
 
-#td-chat-area p {
+#td-chat-area p ,#area p{
 	margin: 0px;
 }
 #tr-chat-form textarea{
@@ -43,7 +43,7 @@ table, tr, td {
 	padding-right: 10px;
 }
 
-.hidden {
+.hidden , .template {
 	display: none !important;
 }
 
