--- a/src/main/webapp/resources/css/layouts/email.css
+++ b/src/main/webapp/resources/css/layouts/email.css
@@ -47,6 +47,10 @@ table, tr, td {
 	display: none !important;
 }
 
+.email-item{
+	cursor: pointer;
+}
+
 .button-success, .button-error, .button-warning, .button-secondary {
 	color: white;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
