On connection close notify the owner and change the user info on the screen

--- a/src/main/webapp/resources/css/layouts/email.css
+++ b/src/main/webapp/resources/css/layouts/email.css
@@ -16,6 +16,16 @@ a {
 	color: #1b98f8;
 }
 
+.offline{
+	border: 1px solid red  !important;
+    border-right: 10px solid red  !important;
+}
+
+.online{
+    border: 1px solid green !important;
+    border-right: 10px solid green  !important;
+}
+
 p.info{
 	color: #336677;
 }
